# sshko

./: .gitignore  AGENTS.md  README.md  pyproject.toml  sshko
src/sshko/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_commands.py  test_parser.py
