[project]
name = "sshko"
version = "0.1.0"
description = "Read-only CLI inspector for your SSH config (~/.ssh/config)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Luka Robajac", email = "luka@kredium.rs" }]
keywords = ["ssh", "ssh-config", "cli", "devops"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lyyka/sshko"
Repository = "https://github.com/lyyka/sshko"

[project.scripts]
sshko = "sshko.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sshko"]

# Dev dependencies, installed by `uv sync` / `uv run`.
[dependency-groups]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
# src layout: make `import sshko` work in tests without an install step.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
